# mipt-masters-robot-dog

./: .gitmodules  Dockerfile  README.md  compose.yaml
robot_dog/: test.txt
robot_dog/dog_walk/: CMakeLists.txt
robot_dog/dog_walk/src/: please_walk.cpp
